ex05 - Stream api - mapMulti - jdk17