@@ -2,20 +2,24 @@ package com.ableneo.jdk11to17.ex06streamapi;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderService {
 
     public List<String> getProductSkusForCustomerHavingQuantityMoreThan(Collection<Order> orders,
                                                                         Customer customer,
                                                                         int quantity) {
-
         return orders
                 .stream()
                 .filter(order -> order.getCustomer().equals(customer))
-                .flatMap(order -> order.getOrderProducts().stream())
-                .filter(orderProduct -> orderProduct.getQuantity() > quantity)
-                .map(OrderProduct::getSku)
-                .collect(Collectors.toList());
+                .<String>mapMulti((order, consumer) -> {
+                    for (OrderProduct orderProduct : order.getOrderProducts()) {
+                        // here we could generate as many items, as we wanted. Or none at all.
+                        // It doesn't have to be 1:1 mapping
+                        if (orderProduct.getQuantity() > quantity) {
+                            consumer.accept(orderProduct.getSku());
+                        }
+                    }
+                })
+                .toList();
     }
 }
